--- a/HelloPerson/HelloPerson.csproj
+++ b/HelloPerson/HelloPerson.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\Jacob\Source\Repos\HelloPerson\HelloPerson\HelloPerson.xml</DocumentationFile>
+  </PropertyGroup>
+
 </Project>
